--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Martín Callegari <martin.callegari@wolox.com.ar>",
   "license": "MIT",
   "scripts": {
+    "start": "webpack --watch",
     "build": "webpack",
     "test": "jest --coverage",
     "prepare": "npm run build",
