--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "javascript"
   ],
   "dependencies": {
+    "enzyme-adapter-react-16": "^1.15.2",
     "immutable": "^3.8.1",
     "marked": "^0.3.6",
     "prop-types": "^15.5.10",
@@ -42,7 +43,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.4",
-    "enzyme": "^2.9.1",
+    "enzyme": "^3.11.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-config-prettier": "^1.6.0",
@@ -56,12 +57,12 @@
     "file-loader": "^0.11.2",
     "husky": "^0.13.3",
     "jest": "^20.0.4",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.14.0",
     "prettier": "^1.1.0",
     "prettier-eslint": "^5.1.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-hot-loader": "^4.6.5",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-hot-loader": "^4.12.14",
     "react-test-renderer": "^15.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
@@ -69,7 +70,8 @@
     "webpack": "^3.4.1"
   },
   "peerDependencies": {
-    "react": "^15.6.1"
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
   },
   "jest": {
     "verbose": true,
